crates/ui/tests/snapshots/panel_snapshots__strategies_screen__empty_state.snap
---
source: crates/ui/tests/panel_snapshots.rs
assertion_line: 629
expression: strategies_screen_summary(&c)
---
screen: strategies
title: Strategies
selected: (none)
config: none
events:
  (none)
