crates/ui/tests/snapshots/panel_snapshots__strategies_screen__override_button_idle.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: strategies_override_summary(&c)
---
screen: strategies
section: risk_veto_events
veto_count: 1
rows:
  veto_id=veto-1 strategy=btc_macd_trend reason=daily_loss_cap button_label=Override border=WARN_500 focused=false
modal:
  state: idle (modal closed)
